AI plays randomly now. Added reset button to restart choices

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="circle">O</button>
       </div>
       <div id="board" class="table">
+        <button id="reset-btn">Reset</button>
         <div class="table__row">
           <div id="00" class="table__tile"></div>
           <div id="01" class="table__tile"></div>
